se agregan algunos css forgot password y signup

--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -9,9 +9,9 @@
   </a>
 
   <div class="header">
-    <ion-title class="title" size="large" style="font-size: 2rem; font-weight: 900;">Olvidé mi contraseña
+    <ion-title class="title">Olvidé mi contraseña
     </ion-title>
-    <p class="subtitle" style="padding: 0 30px; font-size: 1.5rem;">Escribe el correo registrado en tu
+    <p class="subtitle">Escribe el correo registrado en tu
       cuenta para recibir instrucciones y
       reestablecer tu contraseña</p>
   </div>
@@ -19,17 +19,10 @@
 
     <ion-item>
       <ion-input [(ngModel)]="email" placeholder="Digita tu correo" class="input" />
-      <ion-icon name="person-outline"></ion-icon>
     </ion-item>
 
-    <div style="
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    margin-top: 30px;
-    ">
-      <button type="submit" (click)="reset()" class="ion-padding"
-        style="width: 80%; font-size: 1.5rem; font-weight: bold; background-color: #247FBB; color: white; border-radius: 20px;">
+    <div class="btn">
+      <button type="submit" (click)="reset()" class="btn__content">
         Recuperar contraseña
       </button>
     </div>
