--- a/src/app/pages/forgot-password/forgot-password.page.scss
+++ b/src/app/pages/forgot-password/forgot-password.page.scss
@@ -1,24 +1,55 @@
 .input{
     font-weight: 300;
-}ion-item {
+    padding: 10px;
+}
+
+ion-item {
     --background: #f1f1f1;
     border-radius: 10px;
     margin-bottom: 16px;
 }
+
 .header{
     margin-top: 100px;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
     text-align: center;
+    margin-top: 160px;
 
     .subtitle{
         color: gray;
-        font-size: 0.9rem;
+        font-size: 22px;
+        padding: 0 30px;
+        margin-bottom: -40px;
     }
-    .title{
-        font-size: 2rem;
+    .title {
+        color: #424242;
+        text-align: center;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.07);
+        font-family: Segoe UI;
+        font-size: 34px;
+        font-style: 700;
+        font-weight: bold;
+        line-height: normal;
+        margin-bottom: -12px;
     }
 }
 
-.sendBtn{
-    margin: 30px;
-}
+.btn__content {
+    width: 230px;
+    margin: 10px;
+    height: 50px;
+    text-transform: none;
+    font-weight: 700;
+    font-size: 18px;
+    margin-top: 30px;
+    background-color: #35536b; 
+    border-radius: 10px;
+  }
+  
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
