--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -1,71 +1,98 @@
-.header{
-    margin-top: 35px;
+.header {
+    margin-top: 80px;
     margin-bottom: 25px;
     text-align: center;
-
-    .subtitle{
-        color: gray;
-        font-size: 0.9rem;
-    }
-    .title{
-        font-size: 2rem;
-    }
 }
 
-.input{
-    font-weight: 300;
+.input {
+    font-weight: 200;
+    margin: 2px;
 }
+
+.logo {
+    height: 180px;
+}
+
+.title {
+    color: #424242;
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.07);
+    font-family: Segoe UI;
+    font-size: 34px;
+    font-style: 700;
+    font-weight: bold;
+    line-height: normal;
+    margin-top: 15px;
+    margin-bottom: -12px;
+}
+
 ion-item {
     --background: #f1f1f1;
     border-radius: 10px;
     margin-bottom: 16px;
 }
-.loginLink{
+.ion-padding{
+    margin: 20px;
+}
+.btn__content {
+    width: 230px;
+    margin: 10px;
+    height: 50px;
+    text-transform: none;
+    font-weight: 700;
+    font-size: 18px;
+    margin-top: 30px;
+    background-color: #35536b; 
+    border-radius: 10px;
+  }
+  
+  .btn {
     display: flex;
-   justify-content: center;
-   margin: auto;
-    // transform: translateY(-50%);
-//   position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 80%;
-  top:20;
-//   margin: auto;  111
-    .p{
+    align-items: center;
+    justify-content: center;
+  }
+.loginLink {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+
+    .p {
         font-size: 0.9em;
     }
+
     a {
         text-decoration: none;
-      }
+        color: #247FBB;
+    }
 }
-#container {
-    text-align: center;
-  
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .errorInput{
+
+.errorInput {
     color: red;
     font-weight: 300;
     font-size: small;
     padding-top: -16px;
     display: flex;
-    // al;
+
     ion-item {
         --background: red !important;
-        // border-radius: 10px;
-        // margin-bottom: 16px;
     }
 }
 
-.invalid{
+.invalid {
     ion-item {
         --background: red !important;
-        // border-radius: 10px;
-        // margin-bottom: 16px;
     }
 }
+
+.errordiv {
+    margin-top: -10px;
+    margin-bottom: 15px; 
+    margin-left: 5px;
+  }
+  
+  .errorInput {
+    display: block;
+    font-size: 14px;
+    margin-top: 5px; 
+  }
+  
